# DreAgent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPENDENCIES_README.md  Dockerfile  EIAGUS_INTEGRATION_SUMMARY.md  Lea_Visual_Code_v2.5_ TTS.py  OUTLOOK_CREDENTIALS_FIX.md  README.md  agent.http  custom_tasks_example.py  desktop_tools.py  diagnose_env.py  docker-compose.prod.yml  docker-compose.yml  grant_integration.py  lea_backup_system.py  lea_history.json  lea_tasks.py  lea_tasks_config.json  model_cache.json  model_registry.py  next.config.js  outlook_integration.py  package-lock.json  package.json  protect_env_file.py  protect_outlook_credentials.py  pyproject.toml  requirements.txt  run.py  run_stress_test.bat  run_stress_test_simple.py  stress_test_enhanced.py  stress_test_report.txt  tailwind.config.ts  universal_file_reader.py
Archive_OldFiles/: AGENTIC_TASKS_GUIDE.md  CLEANUP_REPORT.md  EDGE_TTS_SETUP.md  FINAL_REVIEW_SUMMARY.md  FIXES_SUMMARY.md  INSTALL.md  Lea.py  Lea2.py  Lea2_11_22_25_working version backup.py  Lea_Visual_Code_v1_1_FIXED (1).py  Lea_Visual_Code_v2.1_TTS.py  Lea_Visual_Code_v2.5.1a_ TTS.py  Leacurser1.1.py  Leacurser1.py  Leacurser1_1_FIXED.py  MODEL_ASSIGNMENTS.md  MODEL_OPTIMIZATION_SUMMARY.md  MODEL_UPDATE_SUMMARY.md  OUTLOOK_EMAIL_SETUP.md  PROGRAM_REVIEW.md  README_TESTING.md  SAFETY_REVIEW.md  STRESS_TEST_GUIDE.md  TRAINING_GUIDE.md  UPDATE_SYSTEM_README.md  VISUAL_AVATAR_FEATURE.md  VOICE_SETUP_ANALYSIS.md  VOICE_SETUP_GUIDE.md  check_voice_dependencies.py  create_backup.ps1  create_backup_simple.py  lea_agentic_history.json  (+17 more)
(+150 files in other folders)
